# classification_problem_datathon

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
data/: train.xlsx  validation.xlsx
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: __init__.py  data_loader.py  data_preprocessing.py  data_split.py  feature_engineering.py  main.py  modeling.py  utils.py
tests/: __init__.py  test_classification_problem.py
